# sqlmate

./: Doxyfile  LICENSE  build.sh  clean.sh  database.cpp  database.hpp  index.md  main.cpp  userDatabase.db
docs/html/: AModel_8hpp.html  AModel_8hpp_source.html  DatabaseManager_8hpp.html  DatabaseManager_8hpp_source.html  IDatabase_8hpp.html  IDatabase_8hpp_source.html  IModel_8hpp.html  IModel_8hpp_source.html  QueryBuilder_8hpp.html  QueryBuilder_8hpp_source.html  SQLite_8cpp.html  SQLite_8hpp.html  SQLite_8hpp_source.html  annotated.html  classes.html  classsqlmate_1_1AModel-members.html  classsqlmate_1_1AModel.html  classsqlmate_1_1DatabaseManager-members.html  classsqlmate_1_1DatabaseManager.html  classsqlmate_1_1IDatabase-members.html  classsqlmate_1_1IDatabase.html  classsqlmate_1_1IModel-members.html  classsqlmate_1_1IModel.html  classsqlmate_1_1IQueryBuilder-members.html  classsqlmate_1_1IQueryBuilder.html  classsqlmate_1_1SQLite-members.html  classsqlmate_1_1SQLite.html  classsqlmate_1_1SQLite_1_1QueryBuilder-members.html  classsqlmate_1_1SQLite_1_1QueryBuilder.html  decorators_8hpp.html  decorators_8hpp_source.html  dir_244f38caeab70896597f6c1837a8e93c.html  dir_28acfac00e92a1dd058b300e3993e731.html  dir_a0559bec41c62babc4043eef3d21af5d.html  dir_f221d982f57c5bd7369aac55dd216c2f.html  dir_fce766826b5826ecb8195d00d46d33f4.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  (+15 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  (+10 more)
docs/latex/: refman.tex
example/: CMakeLists.txt  main.cpp
sqlmate/: CMakeLists.txt  sqlite3.hpp
sqlmate/Database/: DatabaseManager.hpp  IDatabase.hpp
sqlmate/Database/SQLite/: SQLite.cpp  SQLite.hpp
sqlmate/Exceptions/: Database.hpp  Model.hpp  QueryBuilder.hpp
sqlmate/Model/: AModel.hpp  IModel.hpp  decorators.hpp
sqlmate/QueryBuilder/: QueryBuilder.hpp
sqlmate/database/: database.cpp  database.hpp  sqlite3.hpp
sqlmate/include/: sqlmate.hpp
sqlmate/model/: AModel.cpp  AModel.hpp  IModel.hpp  decorators.hpp
sqlmate/querybuilder/: querybuilder.hpp
